--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "mpvue": "^1.0.11"
@@ -47,6 +48,7 @@
     "px2rpx-loader": "^0.1.10",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.0.3",
+    "sass-resources-loader": "^1.3.3",
     "semver": "^5.3.0",
     "shelljs": "^0.8.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
